fix font weight on mobile

--- a/src/app/components/work-experience-container/work-experience-container.component.scss
+++ b/src/app/components/work-experience-container/work-experience-container.component.scss
@@ -22,7 +22,7 @@
 .underline {
     text-decoration: underline;
     text-decoration-color: v.$accent-color;
-    font-weight: 600;
+    font-weight: 900;
     font-size: 1.2rem;
     &.work-info {
         margin: 0.6rem 0 0.3rem 0;
@@ -48,7 +48,7 @@ ul {
     list-style-type: "-  ";
     & li::marker {
         color: v.$accent-color;
-        font-weight: 600;
+        font-weight: 900;
     }
 }
 
