--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
     text-decoration-color: v.$accent-color;
     text-decoration-thickness: 2px;
     font-size: 32px;
-    font-weight: 600;
+    font-weight: 900;
     font-family: 'Courier New', Courier, monospace;
     &.dark-mode {
         color: v.$light-background;
